Start home section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Weekly WebDev Challenge #2</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href=https://fonts.googleapis.com/css?family=Raleway:300,400,700,900 rel="stylesheet">
     <!--bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--css-->
@@ -15,34 +15,45 @@
 
   <body>
 
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <section id="home">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <!--  <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>-->
-          </button>
-          <a class="navbar-brand scrollable" href="#home">
-            <img alt="Cahee" src="img/logo.png">
-          </a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#home" class="scrollable">Home</a></li>
-            <li><a href="#about" class="scrollable">About</a></li>
-            <li><a href="#services" class="scrollable">Services</a></li>
-            <li><a href="#gallery" class="scrollable">Gallery</a></li>
-            <li><a href="#blog" class="scrollable">Blog</a></li>
-            <li><a href="#contact" class="scrollable">Contact</a></li>
-          </ul>
-        </div>
+        <!-- NAVBAR -->
+        <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <!--  <span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>-->
+              </button>
+              <a class="navbar-brand scrollable" href="#home">
+                <img alt="Cahee" src="img/logo.png">
+              </a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#home" class="scrollable">Home</a></li>
+                <li><a href="#about" class="scrollable">About</a></li>
+                <li><a href="#services" class="scrollable">Services</a></li>
+                <li><a href="#gallery" class="scrollable">Gallery</a></li>
+                <li><a href="#blog" class="scrollable">Blog</a></li>
+                <li><a href="#contact" class="scrollable">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+        <!--HOME-->
+        <div class="row">
+          <div class="col-md-4">
+            <h1>Fresh Life</h1>
+            <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <button type="button" class="btn btn-default">Get free now</button>
+          </div>
+        </div>      
       </div>
-    </nav>
+    </section>
 
-
-    <div class="container"></div>
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
