Fix positioning in navbar

--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <!--  <span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>-->
               </button>
               <a class="navbar-brand scrollable" href="#home">
                 <img alt="Cahee" src="img/logo.png">
@@ -45,7 +42,7 @@
 
         <!--HOME-->
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4" id="home-text">
             <h1>Fresh Life</h1>
             <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
             <button type="button" class="btn btn-default">Get free now</button>
