Add section about-us

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <section id="home">
       <div class="container">
-        <!-- NAVBAR -->
+
+        <!--NAVBAR-->
         <nav class="navbar navbar-default navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
@@ -30,7 +31,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="#home" class="scrollable">Home</a></li>
-                <li><a href="#about" class="scrollable">About</a></li>
+                <li><a href="#about-us" class="scrollable">About</a></li>
                 <li><a href="#services" class="scrollable">Services</a></li>
                 <li><a href="#gallery" class="scrollable">Gallery</a></li>
                 <li><a href="#blog" class="scrollable">Blog</a></li>
@@ -48,6 +49,21 @@
             <button type="button" class="btn btn-default">Get free now</button>
           </div>
         </div>      
+      </div>
+    </section>
+
+    <!--ABOUT US-->
+    <section id="about-us">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6 col-sm-4"><img src="img/raspberries1.png" class=".img-responsive"/></div>
+          <div class="col-md-6 col-sm-4" id="about-us-text">
+            <h2>About Us</h2>
+            <p>Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+
+            <p>Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+          </div>     
+        </div>
       </div>
     </section>
 
