Almost fix mobile view

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
         <nav class="navbar navbar-default navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              </button>
+              <span class="glyphicon glyphicon-menu-hamburger"  class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"></span>
+             <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              </button> -->
               <a class="navbar-brand scrollable" href="#home">
                 <img alt="Cahee" src="img/logo.png">
               </a>
             </div>
+           
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="#home" class="scrollable">Home</a></li>
@@ -43,7 +45,7 @@
 
         <!--HOME-->
         <div class="row">
-          <div class="col-md-4" id="home-text">
+          <div class="col-md-6 col-sm-12" id="home-text">
             <h1>Fresh Life</h1>
             <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
             <button type="button" class="btn btn-default">Get free now</button>
@@ -56,8 +58,10 @@
     <section id="about-us">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-6 col-sm-4"><img src="img/raspberries1.png" class=".img-responsive"/></div>
-          <div class="col-md-6 col-sm-4" id="about-us-text">
+          <div class="col-md-6 col-sm-12">
+            <img src="img/raspberries1.png" alt="raspberries" class="img-responsive center-block"/>
+          </div>
+          <div class="col-md-6 col-sm-12" id="about-us-text">
             <h2>About Us</h2>
             <p>Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
 
