--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <span class="glyphicon glyphicon-menu-hamburger"  class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"></span>
+              <span class="glyphicon glyphicon-menu-hamburger navbar-toggle collapsed visible-xs-*" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"></span>
              <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               </button> -->
               <a class="navbar-brand scrollable" href="#home">
