--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <div class="container">
             <div class="navbar-header">
               <span class="glyphicon glyphicon-menu-hamburger navbar-toggle collapsed visible-xs-*" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"></span>
-             <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              </button> -->
+              <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+</button> -->
               <a class="navbar-brand scrollable" href="#home">
                 <img alt="Cahee" src="img/logo.png">
               </a>
             </div>
-           
+
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="#home" class="scrollable">Home</a></li>
@@ -71,6 +71,9 @@
       </div>
     </section>
 
+    <!--
+    <section>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
